tests/snapshot/error/source_locations/expression/binary/bit_xor.exp
TypeError: BigInt cannot be converted to number
  ┌ source_locations/expression/binary/bit_xor.js:1:3
  |
1 | 1 ^ 2n
  |   ^
Stack trace:
  at <global> (source_locations/expression/binary/bit_xor.js:1:3)